Perf: 이미지 webp로 변환

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                     </div>
                 </div>
                 <div class="reveal-event__video">
-                    <video controls="" preload="metadata" poster="./assets/images/gallery-video-thum.jpg">
+                    <video controls="" preload="metadata" poster="./assets/images/gallery-video-thum.webp">
                         <source src="https://videos.ctfassets.net/bi0eniwfxrs8/6DpSzBqkk5NvLQLQkCUWWg/1cb76be2be6792e30cbddfdb4f3e8a41/Scout_Reveal_Sizzle_Final_Deliverable.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -362,28 +362,28 @@
                     <div class="swiper gallery-thum" aria-hidden="true">
                         <ul class="swiper-wrapper">
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-01.jpg" alt="gallery image 1">
+                                <img src="./assets/images/gallery-thum-01.webp" alt="gallery image 1">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-02.jpg" alt="gallery image 2">
+                                <img src="./assets/images/gallery-thum-02.webp" alt="gallery image 2">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-03.jpg" alt="gallery image 3">
+                                <img src="./assets/images/gallery-thum-03.webp" alt="gallery image 3">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-04.jpg" alt="gallery image 4">
+                                <img src="./assets/images/gallery-thum-04.webp" alt="gallery image 4">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-05.jpg" alt="gallery image 5">
+                                <img src="./assets/images/gallery-thum-05.webp" alt="gallery image 5">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-06.jpg" alt="gallery image 6">
+                                <img src="./assets/images/gallery-thum-06.webp" alt="gallery image 6">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-07.jpg" alt="gallery image 7">
+                                <img src="./assets/images/gallery-thum-07.webp" alt="gallery image 7">
                             </li>
                             <li class="swiper-slide">
-                                <img src="./assets/images/gallery-thum-08.jpg" alt="gallery image 8">
+                                <img src="./assets/images/gallery-thum-08.webp" alt="gallery image 8">
                             </li>
                         </ul>
                         <div class="gallery-thum-navigation">
@@ -405,28 +405,28 @@
                             <div class="swiper gallery-modal__swiper">
                                 <ul class="swiper-wrapper">
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-01.jpg" alt="gallery image 1">
+                                        <img src="./assets/images/gallery-01.webp" alt="gallery image 1">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-02.jpg" alt="gallery image 2">
+                                        <img src="./assets/images/gallery-02.webp" alt="gallery image 2">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-03.jpg" alt="gallery image 3">
+                                        <img src="./assets/images/gallery-03.webp" alt="gallery image 3">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-04.jpg" alt="gallery image 4">
+                                        <img src="./assets/images/gallery-04.webp" alt="gallery image 4">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-05.jpg" alt="gallery image 5">
+                                        <img src="./assets/images/gallery-05.webp" alt="gallery image 5">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-06.jpg" alt="gallery image 6">
+                                        <img src="./assets/images/gallery-06.webp" alt="gallery image 6">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-07.jpg" alt="gallery image 7">
+                                        <img src="./assets/images/gallery-07.webp" alt="gallery image 7">
                                     </li>
                                     <li class="swiper-slide">
-                                        <img src="./assets/images/gallery-08.jpg" alt="gallery image 8">
+                                        <img src="./assets/images/gallery-08.webp" alt="gallery image 8">
                                     </li>
                                 </ul>
                                 <div class="gallery-modal-navigation">
