Fix: 웹 접근성 개선

--- a/index.html
+++ b/index.html
@@ -88,32 +88,35 @@
                         </li>
                     </ul>
                 </nav>
-                <ul class="menu__product">
-                    <li class="menu__product-item">
-                        <div class="menu__product-item-text-box">
-                            <h5 class="menu__product-item-title">Traveler</h5>
-                            <small class="menu__product-item-subtitle">[SUV]</small>
-                        </div>
-                        <div class="menu__product-item-img-box">
-                            <img src="./assets/images/traveler_product_thumb-02.webp" alt="Traveler SUV image">
-                        </div>
-                        <a href="#" class="menu__product-item-link">
-                            <span class="sr-only">Learn more about Traveler</span>
-                        </a>
-                    </li>
-                    <li class="menu__product-item">
-                        <div class="menu__product-item-text-box">
-                            <h5 class="menu__product-item-title">Terra</h5>
-                            <small class="menu__product-item-subtitle">[Truck]</small>
-                        </div>
-                        <div class="menu__product-item-img-box">
-                            <img src="./assets/images/terra_product_thumb-02.webp" alt="Terra truck image">
-                        </div>
-                        <a href="#" class="menu__product-item-link">
-                            <span class="sr-only">Learn more about Terra</span>
-                        </a>
-                    </li>
-                </ul>
+                <div class="menu__product-wrap">
+                    <h2 class="sr-only">Menu Products</h2>
+                    <ul class="menu__product">
+                        <li class="menu__product-item">
+                            <div class="menu__product-item-text-box">
+                                <h3 class="menu__product-item-title">Traveler</h3>
+                                <small class="menu__product-item-subtitle">[SUV]</small>
+                            </div>
+                            <div class="menu__product-item-img-box">
+                                <img src="./assets/images/traveler_product_thumb-02.webp" alt="Traveler SUV image">
+                            </div>
+                            <a href="#" class="menu__product-item-link">
+                                <span class="sr-only">Learn more about Traveler</span>
+                            </a>
+                        </li>
+                        <li class="menu__product-item">
+                            <div class="menu__product-item-text-box">
+                                <h3 class="menu__product-item-title">Terra</h3>
+                                <small class="menu__product-item-subtitle">[Truck]</small>
+                            </div>
+                            <div class="menu__product-item-img-box">
+                                <img src="./assets/images/terra_product_thumb-02.webp" alt="Terra truck image">
+                            </div>
+                            <a href="#" class="menu__product-item-link">
+                                <span class="sr-only">Learn more about Terra</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <div class="menu__cta reserve-cta">
                     <div class="reserve-cta__inner">
                         <div class="reserve-cta__top">
@@ -450,7 +453,7 @@
                 <li class="product__item scroll-anim">
                     <div class="product__item-content">
                         <div class="product__item-heading">
-                            <h4 class="product__item-title">Traveler</h4>
+                            <h3 class="product__item-title">Traveler</h3>
                             <p class="product__item-text">The original icon, renewed.</p>
                         </div>
                         <a href="#" aria-hidden="true" tabindex="-1" class="product__item-button box-button box-button--primary">Discover</a>
@@ -465,7 +468,7 @@
                 <li class="product__item scroll-anim">
                     <div class="product__item-content">
                         <div class="product__item-heading">
-                            <h4 class="product__item-title">Terra</h4>
+                            <h3 class="product__item-title">Terra</h3>
                             <p class="product__item-text">The no-days-off pickup.</p>
                         </div>
                         <a href="#" aria-hidden="true" tabindex="-1" class="product__item-button box-button box-button--primary">Discover</a>
@@ -534,32 +537,35 @@
                         <a href="#" class="fnb__item-ink">Support</a>
                     </li> 
                 </ul>
-                <ul class="footer__product menu__product">
-                    <li class="menu__product-item">
-                        <div class="menu__product-item-text-box">
-                            <h5 class="menu__product-item-title">Traveler</h5>
-                            <small class="menu__product-item-subtitle">[SUV]</small>
-                        </div>
-                        <div class="menu__product-item-img-box">
-                            <img src="./assets/images/traveler_product_thumb-02.webp" alt="Traveler SUV image">
-                        </div>
-                        <a href="#" class="menu__product-item-link">
-                            <span class="sr-only">Learn more about Traveler</span>
-                        </a>
-                    </li>
-                    <li class="menu__product-item">
-                        <div class="menu__product-item-text-box">
-                            <h5 class="menu__product-item-title">Terra</h5>
-                            <small class="menu__product-item-subtitle">[Truck]</small>
-                        </div>
-                        <div class="menu__product-item-img-box">
-                            <img src="./assets/images/terra_product_thumb-02.webp" alt="Terra truck image">
-                        </div>
-                        <a href="#" class="menu__product-item-link">
-                            <span class="sr-only">Learn more about Terra</span>
-                        </a>
-                    </li>
-                </ul>
+                <div class="footer__product-wrap menu__product-wrap">
+                    <h2 class="sr-only">Footer Products</h2>
+                    <ul class="footer__product menu__product">
+                        <li class="menu__product-item">
+                            <div class="menu__product-item-text-box">
+                                <h3 class="menu__product-item-title">Traveler</h5>
+                                <small class="menu__product-item-subtitle">[SUV]</small>
+                            </div>
+                            <div class="menu__product-item-img-box">
+                                <img src="./assets/images/traveler_product_thumb-02.webp" alt="Traveler SUV image">
+                            </div>
+                            <a href="#" class="menu__product-item-link">
+                                <span class="sr-only">Learn more about Traveler</span>
+                            </a>
+                        </li>
+                        <li class="menu__product-item">
+                            <div class="menu__product-item-text-box">
+                                <h3 class="menu__product-item-title">Terra</h5>
+                                <small class="menu__product-item-subtitle">[Truck]</small>
+                            </div>
+                            <div class="menu__product-item-img-box">
+                                <img src="./assets/images/terra_product_thumb-02.webp" alt="Terra truck image">
+                            </div>
+                            <a href="#" class="menu__product-item-link">
+                                <span class="sr-only">Learn more about Terra</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <div class="footer__community">
                     <div class="footer__newsletter">
                         <h3 class="footer__newsletter-title">
