--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout Motors clone coding</title>
-    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg">
-    <meta name="robots" content="noindex">
-    <meta name="googlebot" content="noindex">
+    <meta name="description" content="학습 목적으로 제작된 Scout Motors 클론 코딩 사이트입니다.">
     <meta property="og:title" content="Scout Motors clone coding">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://miraeae.github.io/scoutmotors">
-    <meta property="og:description" content="Scout Motors 클론 코딩">
+    <meta property="og:description" content="학습 목적으로 제작된 Scout Motors 클론 코딩 사이트입니다.">
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
